<resources>
    <string name="app_name">CovidTracker</string>
    <string name="track_countries">Track Countries</string>
    <string name="total_cases">Total Cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="active_cases">Active Cases</string>
    <string name="global_status">global status</string>
    <string name="cases">Cases</string>
    <string name="_0">0</string>
    <string name="critical">Critical</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="today_s_death">Today\'s Death</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="search_country">Search</string>
    <string name="country_name">Country Name</string>
    <string name="today_s_cases">Today\'s Cases</string>
    <string name="population">Population</string>
    <string name="continent">Continent</string>
</resources>