<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/country_name"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/cases"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/countryCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_s_cases"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/CountryDailyCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/deaths"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/countryDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_s_death"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/countryDailyDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/recovered"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/numCRecoveredases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/active_cases"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/numActiveCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/critical"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/numCriticaCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/population"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/numPopulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/continent"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/continent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOne"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTwo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

</LinearLayout>